hub_route_table.tf
resource "azurerm_route_table" "hub_route_table" {
  name                = "hub-route-table"
  location            = azurerm_resource_group.hub_rg.location
  resource_group_name = azurerm_resource_group.hub_rg.name
  lifecycle {
    ignore_changes = [tags]
  }
}

resource "azurerm_route" "hub_firewall_route" {
  name                   = "hub-firewall-route"
  resource_group_name    = azurerm_resource_group.hub_rg.name
  route_table_name       = azurerm_route_table.hub_route_table.name
  address_prefix         = "0.0.0.0/0"
  next_hop_type          = "VirtualAppliance"
  next_hop_in_ip_address = azurerm_firewall.hub_firewall.ip_configuration[0].private_ip_address
}


resource "azurerm_subnet_route_table_association" "hub_route_association" {
  subnet_id      = azurerm_subnet.hub_subnet.id
  route_table_id = azurerm_route_table.hub_route_table.id
}
